--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="tech newsletters, AI newsletter, data science newsletter, machine learning newsletter, crypto newsletter, tech startups, weekly newsletter">
 
   <!-- Favicon -->
-  <link rel="icon" href="/site/public/favicon.png" type="image/png">
+  <link rel="icon" href="/blaze-logo.png" type="image/png">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,14 +20,14 @@
   <meta property="og:url" content="https://blaze.email/">
   <meta property="og:title" content="Blaze Newsletters - Weekly Tech Newsletters">
   <meta property="og:description" content="Subscribe to our free weekly tech newsletters covering AI, data science, machine learning, crypto, tech startups, and electronics.">
-  <meta property="og:image" content="https://blaze.email/site/public/logo.png">
+  <meta property="og:image" content="https://blaze.email/blaze-logo.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://blaze.email/">
   <meta property="twitter:title" content="Blaze Newsletters - Weekly Tech Newsletters">
   <meta property="twitter:description" content="Subscribe to our free weekly tech newsletters covering AI, data science, machine learning, crypto, tech startups, and electronics.">
-  <meta property="twitter:image" content="https://blaze.email/site/public/logo.png">
+  <meta property="twitter:image" content="https://blaze.email/blaze-logo.png">
   <meta name="twitter:creator" content="@blazeemail">
   <meta name="twitter:site" content="@blazeemail">
 
@@ -39,7 +39,7 @@
       <!-- Header -->
       <header>
         <div class="logo-title">
-          <img src="/site/public/logo.png" alt="blaze.email logo" width="48" height="48">
+          <img src="/blaze-logo.png" alt="blaze.email logo" width="48" height="48">
           <h1>Blaze Newsletters</h1>
         </div>
         <p class="tagline">Weekly newsletter digests collating the best blogs and tech articles</p>
