--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="tech newsletters, AI newsletter, data science newsletter, machine learning newsletter, crypto newsletter, tech startups, weekly newsletter">
 
   <!-- Favicon -->
-  <link rel="icon" href="/blaze-logo.png" type="image/png">
+  <link rel="icon" href="blaze-logo.png" type="image/png">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
       <!-- Header -->
       <header>
         <div class="logo-title">
-          <img src="/blaze-logo.png" alt="blaze.email logo" width="48" height="48">
+          <img src="blaze-logo.png" alt="blaze.email logo" width="48" height="48">
           <h1>Blaze Newsletters</h1>
         </div>
         <p class="tagline">Weekly newsletter digests collating the best blogs and tech articles</p>
