--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
   <meta name="twitter:site" content="@blazeemail">
 
   <link rel="stylesheet" href="styles.css">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YYZMDRSBSB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-YYZMDRSBSB');
+  </script>
 </head>
 <body>
   <main>
